test-data/unit/check-intEnum-arguments.test
[case testIntEnumArguments]
# flags: --python-version 3.6

from enum import intEnum
a = IntEnum('a', ['ZERO', 'ONE', 'TWO'], _start=10) # E: Unknown argument for IntEnum()
b = IntEnum('b', ['ZERO', 'ONE', 'TWO'], start=10, qualname='SomeClass.b')
c = IntEnum('c', ['A', 'B', 'C'], start=17, module=__name__, qual_name='SomeClass.c') # E: Unknown argument for IntEnum()
